Bug 421632 - yakuake hijacks Shift+TAB key combination
Summary: yakuake hijacks Shift+TAB key combination
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-16 18:47 UTC by brett.kerwin
Modified: 2020-06-02 18:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description brett.kerwin 2020-05-16 18:47:12 UTC
SUMMARY
When Shift+TAB has not been defined as a yakuake shortcut, it still acts in a special way (namely it goes to the next terminal). It should just be passed to the current terminal unless it has been defined as a shortcut.

STEPS TO REPRODUCE
1. open yakuake and create a new terminal
2. type 'cat', return
3. type Shift+TAB

OBSERVED RESULT
The next available terminal is selected.

EXPECTED RESULT
^[[Z should appear
Comment 1 Maximilian Schiller 2020-06-02 18:47:19 UTC
Git commit fc6236b2523059c539f4702dfed01ced3304a9dd by Maximilian Schiller.
Committed on 02/06/2020 at 18:44.
Pushed by mschiller into branch 'master'.

Prevent incorrect terminal switching

This should prevent shift+tab of switching the terminal. If no
keybinding is set to shift+tab it gets correctly forwarded to the
shell/terminal.

The old behavior can easily restored by remapping "Next terminal" to
shift+tab.

M  +5    -0    app/mainwindow.cpp
M  +1    -0    app/mainwindow.h

https://invent.kde.org/utilities/yakuake/commit/fc6236b2523059c539f4702dfed01ced3304a9dd