Prevent incorrect terminal switching

This should prevent shift+tab of switching the terminal. If no
keybinding is set to shift+tab it gets correctly forwarded to the
shell/terminal.

The old behavior can easily restored by remapping "Next terminal" to
shift+tab.

BUG: 421632