app/mainwindow.h
@@ -95,6 +95,7 @@ class MainWindow : public KMainWindow
         void changeEvent(QEvent* event) override;
         void closeEvent(QCloseEvent *event) override;
         bool event(QEvent* event) override;
+        bool focusNextPrevChild(bool) override;
 
         virtual bool queryClose() override;
 
